[project]
name = "clitube"
version = "1.0.1"
description = "A simple CLI for playing and downloading YouTube videos"
authors = [
    { name = "VxidDev" }
]
requires-python = ">=3.11"

dependencies = [
    "typer",
    "rich",
    "tomli",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
clitube = "main:app"
